# GroundLoop

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
codewiki/src/: config.py
docs/: 2026-07-06-first-evaluation.md  2026-07-07-claim-kb-preview-findings.md  2026-07-07-plan-format-phase3-findings.md  2026-07-09-android-log-match-v2-findings.md  2026-07-10-component-routing-findings.md  2026-07-10-functional-bug-match-findings.md  2026-07-11-functional-10case-e2e-findings.md  STATUS.md  application-guide.md  architecture.md  build-setup.md  capabilities.md  charter.md  data-flow.md  downstream-fix-loop.md  engines.md  environments.md  evaluation.md  fix-loop.md  groundloop-testing-strategy.md  guide.md  kb-distillation.md  m1-index-build.md  module-map.md  production-guide.md  production-migration.md  results-log.md  roadmap.md  skill-kb-migration.md  stages-concept.md  stakeholder-overview.md  type2-atlas-build-findings.md  type2-eval-setup.md  type2-evaluation.md  user-guide.md  workflow.md  workflows-zh.md  workflows.md
docs/runbooks/: camelcase-tokenization-a1.md  cascade-judge-production-gate.md  labs-peak-stack-production-ab.md
groundloop/adapters/: estate.py  extractor_recording.py
groundloop/cli/: __init__.py  __main__.py
groundloop/config/: settings.py
groundloop/core/: ports.py  types.py  workflow.py
groundloop/engines/: _envcompat.py
groundloop/eval/: abstain.py  arms.py  combine_oracle.py  cost.py  dataset.py  extractors.py  label_bug_kind.py  metrics.py  report.py  runner.py  scorecard.py
groundloop/faulteval/: arms.py  metrics.py  runner.py
groundloop/fix/: context.py  patch.py  plan.py
groundloop/fixeval/: archive.py  base_checkout.py  compare.py  localize.py  patch.py  plan.py  report.py  runner.py  scorecard.py
groundloop/funceval/: arms.py  runner.py
groundloop/grade/: compare.py  grade_run.py  grader.py  promotion.py
groundloop/kb/: __init__.py  ab.py  accept.py  attribute.py  claim.py  (+15 more)
o/: manifest.json
tests/: conftest.py  test_atlas_fixture.py  test_atlas_index.py  test_atlas_rerank_localize.py  test_cli.py  test_e2e_real_index.py  test_e2e_vertical_slice.py  test_fix.py  test_fleet_estate.py  test_grader.py  test_index.py  test_invariants.py  test_localize_dispatch.py  test_mock_gerrit.py  test_mock_jira.py  test_ports.py  test_settings.py  test_signal_extractor.py  test_signal_query.py  test_types.py  test_workflow.py
(+541 files in other folders)
