[project]
name = "groundloop"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp",
    "codebase-memory-mcp==0.8.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# produce (CodeWiki wiki generation) — build-time only; runtime installs omit this extra
produce = [
    "click>=8.1.0",
    "keyring>=24.0.0",
    "GitPython>=3.1.40",
    "Jinja2>=3.1.6",
    "tree-sitter>=0.23.2",
    "tree-sitter-language-pack>=0.8.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.21.4",
    "tree-sitter-typescript>=0.21.2",
    "tree-sitter-c>=0.21.4",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-kotlin>=1.1.0",
    "openai>=1.107.0",
    "litellm>=1.77.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydantic-ai>=1.0.6",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "networkx>=3.5",
    "psutil>=7.0.0",
    "PyYAML>=6.0.2",
    "mermaid-parser-py>=0.0.2",
    "mermaid-py>=0.8.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "colorama>=0.4.6",
    "logfire>=4.1.0",
    "coding-agent-wrapper>=0.1.2",
]

[project.scripts]
gloop = "groundloop.cli:main"

[tool.setuptools.packages.find]
include = ["groundloop*"]

[tool.ruff]
line-length = 110

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
